--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_FIND_DEBUG_MODE ON)
 
 add_link_options("/NODEFAULTLIB:MSVCRT")
 set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL/")
-find_package(OpenSSL REQUIRED)
+find_package(OpenSSL 3.0 REQUIRED)
 
 set(LINK_LIBS OpenSSL::SSL OpenSSL::Crypto crypt32.lib ws2_32.lib ncrypt.lib)
 add_subdirectory(cng_provider)
