Cmake files: Better linking instructions
It's a bit pointless to link with /NODEFAULTLIB:MSVCRT to then manually add
some common user libraries.  Better let CMake do its job.

This removes the variable LINK_LIBS, and has cng_provider and client link
with different lists of libraries, and just the extra ones that each needs.

--- a/cng_provider/CMakeLists.txt
+++ b/cng_provider/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(cng_provider MODULE cng_provider.c
         keymgmt/cng_keymgmt_functions.c
         signature/cng_signature_functions.c
         ../debug.c)
-target_link_libraries(cng_provider ${LINK_LIBS})
-add_compile_definitions(_WINDLL)
+target_include_directories(cng_provider PRIVATE ${OPENSSL_INCLUDE_DIR})
+target_link_libraries(cng_provider PRIVATE OpenSSL::Crypto ncrypt)
 
 install(TARGETS cng_provider DESTINATION ossl-modules)
