--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(client client.c ../debug.c)
-target_link_libraries(client PUBLIC ${LINK_LIBS})
+target_link_libraries(client PUBLIC OpenSSL::SSL OpenSSL::Crypto)
