CMake files: On Windows, link everything with static OpenSSL libraries
This avoids a number of problems with dealing with OpenSSL DLLs and
FindOpenSSL.cmake.  See comment in CMakeLists.txt for an in depth
explanation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,18 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_INSTALL_PREFIX "C:/Program Files/OpenSSL/lib")
 set(CMAKE_FIND_DEBUG_MODE ON)
 
+if(WIN32)
+  # Unfortunately, FindOpenSSL.cmake doesn't give satisfactory results
+  # on Windows.  It adds the OpenSSL libraries with the type UNKNOWN,
+  # which excludes any possibility to declare the associated DLL.
+  # This means that for any application or module that's linked with
+  # the export libraries for those DLLs, those DLLs must be copied
+  # manually alongside those applications and modules (and you must
+  # figure out the DLL name on your own).
+  # It's simpler to link with static OpenSSL libraries and not deal
+  # with their DLLs at all.
+  set(OPENSSL_USE_STATIC_LIBS TRUE)
+endif()
 set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL/")
 find_package(OpenSSL 3.0 REQUIRED)
 
