--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,31 @@
-name: Windows GitHub CI
-
-on:
-  pull_request: []
-  push: []
-  schedule:
-    # Run this experiment every 4th hour
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '* */8 * * *'
-
+name: Automatic CNG provider build
+on: [push, pull_request]
 jobs:
   build-cng_provider:
     strategy:
       matrix:
-        platform:
-          - msvc-arch: x64
-            cmake-arch: x64
-            openssl-target: VC-WIN64A
-          - msvc-arch: x86
-            cmake-arch: Win32
-            openssl-target: VC-WIN32
+        platform: [x64, x86]
+        type: [Release, Debug]
     runs-on: windows-latest
     steps:
-      - name: install MSVC for ${{ matrix.platform.msvc-arch }}
+      - name: set GitHub CI variables to x64
+        if: ${{ matrix.platform == 'x64' }}
+        env:
+          CMAKE_ARCH_VAR: x64
+          OPENSSL_TARGET_VAR: VC-WIN64A
+      - name: set GitHub CI variables to x86
+        if: ${{ matrix.platform == 'x86' }}
+        env:
+          CMAKE_ARCH_VAR: Win32
+          OPENSSL_TARGET_VAR: VC-WIN32
+      - name: set GitHub CI debug variables
+        if: ${{ matrix.type == 'Debug' }}
+        env:
+          OPENSSL_DEBUG_VAR: -d enable-trace
+      - name: install MSVC for ${{ matrix.platform }}
         uses: ilammy/msvc-dev-cmd@v1
         with:
-          arch: ${{ matrix.platform.msvc-arch }}
+          arch: ${{ matrix.platform }}
       - name: checkout cng_provider
         uses: actions/checkout@v3
         with:
@@ -34,28 +35,28 @@ jobs:
         with:
           repository: openssl/openssl
           path: openssl
-      - name: configure OpenSSL for ${{matrix.platform.openssl-target}}
+      - name: configure OpenSSL for ${{ env.OPENSSL_TARGET_VAR }}
         run: |
           $cwd = Get-Location
           mkdir ..\openssl-install
-          perl Configure ${{matrix.platform.openssl-target}} --prefix="$cwd\..\openssl-install" no-asm no-shared
+          perl Configure ${{ env.OPENSSL_TARGET_VAR }} ${{ env.OPENSSL_DEBUG_VAR }} --prefix="$cwd\..\openssl-install" no-asm no-shared
         working-directory: openssl
       - name: build+install OpenSSL
         run: nmake /S install_sw
         working-directory: openssl
-      - name: configure cng_provider for ${{ matrix.platform.cmake-arch }}
+      - name: configure cng_provider for ${{ env.CMAKE_ARCH_VAR }}
         run: |
           $cwd = Get-Location
-          cmake -A ${{ matrix.platform.cmake-arch }} `
+          cmake -A ${{ env.CMAKE_ARCH_VAR }} `
                 -DCMAKE_INSTALL_PREFIX="$cwd\openssl-install" `
                 -DOPENSSL_ROOT_DIR="$cwd\openssl-install" `
                 -S . -B _build
       - name: build cng_provider
-        run: cmake --build _build --config Release
+        run: cmake --build _build --config ${{ matrix.type }}
       - name: archive cng_provider build
         uses: actions/upload-artifact@v3
         with:
-          name: cng_provider_${{ matrix.platform.msvc-arch }}.zip
+          name: cng_provider_${{ matrix.platform }}_${{ matrix.type }}.zip
           path: |
             _build\cng_provider\Release\cng_provider.dll
             _build\cng_provider\Release\cng_provider.lib
